--- a/mapping/index.html
+++ b/mapping/index.html
@@ -91,50 +91,53 @@
         <input type="submit" value="add">
       </form>
       <hr>
-	   <ol class="unstyled">
-        <li ng-repeat="mappingNode in mapping.mappings">
-          <span>{{mappingNode.clientNode.name}}</span>
-          <span>{{mappingNode.childNodes}}</span>
-
-        </li>
-      </ol>
+    <div class="node-table-container">
       <table class="mappingTable">
+        <tr>
+          <td class="medium">Client Competency</td>
+          <td class="medium">TG Competency</td>
+
+          <td class="small">Rank</td>
+          <td class="small">Weight</td>
+          <td class="small">Action</td>
+        </tr>
         <tr ng-repeat="mapping in mapping.mappings">
 		  <td>
 			<table>
 				<tr>
-					<td>{{mapping.clientNode}}</td>
+					<td>{{mapping.clientNode.name}}</td>
 				</tr>
 			</table>
 		  </td>
           <td>
 			<table>
 				<tr ng-repeat="childNode in mapping.childNodes">
-				<td>{{childNode.tgCompetency}}</td><td>{{childNode.weight}}</td><td>{{childNode.rank}}</td>
+				<td>{{childNode.tgCompetency.name}}</td><td>{{childNode.weight}}</td><td>{{childNode.rank}}</td>
 				</tr>
 			</table>
 		  </td>
         </tr>
       </table>
+    </div>
 	  <form ng-submit="mapping.addMapping()">
 		<label>Client Node:</label>
 		<select class="input-select node-option" ng-model="mapping.selectClientNode" ng-options="node.name for node in mapping.nodes">
       <option value="">-- choose client node --</option>
     </select>
-		<span>{{mapping.selectClientNode.code}}</span>
-		<input class="input-box node-value" type="text" ng-model="mapping.selectTgCompetencyWeight" placeholder="Enter a node weight here">
+		<span>{{mapping.selectClientNode.code}}</span><br />
+		<input class="input-box node-value" type="text" ng-model="mapping.selectTgCompetencyWeight" placeholder="Enter a node weight here"><br />
 		<label>Testgird Node:</label>
 		<select class="input-select node-option" ng-model="mapping.selectTgCompetency"  ng-options="node.name for node in mapping.tgCompetencies">
       <option value="">-- choose Testgrid node --</option>
     </select>
-		<span>{{mapping.selectTgCompetency.code}}</span>
+		<span>{{mapping.selectTgCompetency.code}}</span><br />
 		        <label>Rank:</label>
         <select class="input-select node-option" ng-model="mapping.selectTgCompetencyRank" >
           <option value="">-- choose rank --</option>
           <option value="1">1</option>
           <option value="2">2</option>
           <option value="3">3</option>
-        </select>
+        </select><br />
 		<input type="submit" value="add">
 	</form>
       <h1>Hello {{mapping.nodeGroupName}}!</h1>
